Authn bootstrap token (#19) (#21) (#22)
* Authn bootstrap token (#19)

Add bootstrap token subresource for hosts

* Feature/agl bootstraptoken errors (#20)
