# internal/apiserver/subresources.go
@@ -3,6 +3,7 @@ package apiserver
 import (
 	"k8s.io/apiserver/pkg/registry/rest"
 
+	"sgroups.io/sgroups-k8s-api/internal/registry/host/bootstraptoken"
 	"sgroups.io/sgroups-k8s-api/internal/registry/host/nft"
 	"sgroups.io/sgroups-k8s-api/internal/registry/host/sockstats"
 	registryoptions "sgroups.io/sgroups-k8s-api/internal/registry/options"
@@ -20,4 +21,5 @@ func installSubresources(m map[string]map[string]rest.Storage, c *client.Client,
 	}
 	v1alpha1Map["hosts/"+v1alpha1.SubresourceHostSocketStats] = sockstats.NewStorage(c, opts)
 	v1alpha1Map["hosts/"+v1alpha1.SubresourceHostNft] = nft.NewStorage(c, opts)
+	v1alpha1Map["hosts/"+v1alpha1.SubresourceHostBootstrapToken] = bootstraptoken.NewStorage(c, opts)
 }
